Fix console output readability

--- a/less/style.less
+++ b/less/style.less
@@ -258,7 +258,7 @@ table.progress-bar {
   font-family: 'Roboto Mono', Menlo, monospace !important;
   font-size: 12px;
   background: @console-black;
-  color: @console-white;
+  color: @console-white !important;
   cursor: text;
 }
 
